--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,49 @@
     padding: 0;
     font-family: 'Roboto';
   }
+
+  /* Card */
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding: 2rem 3rem;
+
+    border-radius: 5px;
+    box-shadow: 3px 3px 10px 1px #8f8f8f;
+}
+
+.card-heading{
+    font-size: 3.5rem;
+    margin-bottom: 2rem;
+    font-weight: 400;
+    color: #002147;
+}
+
+.card-icon{
+    font-size: 5rem;
+    color: #002147;
+}
+
+/* Button */
+
+.primary-button{
+  margin-top: 2rem;
+  padding: 0.5rem 2rem;
+  width: 80%;
+  border: none;
+
+  background-color: #002147;
+  color:#FBFBFF;
+
+  font-size: 1rem;
+
+  border-radius: 5px;
+}
+
+.primary-button:hover{
+  cursor: pointer;
+  background-color: #002147f1;
+}
