--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,39 @@
     font-family: 'Roboto';
   }
 
-  /* Card */
+/* Layout */
+
+.container {
+  z-index: 1;
+  width: 100%;
+  max-width: 1300px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
+@media screen and (max-width: 960px) {
+  .container{
+    padding: 0;
+  }
+}
+
+.align-end{
+  align-self: flex-end;
+}
+
+/* Margin */
+.mt-1{
+  margin-top: 1rem;
+}
+.mt-2{
+  margin-top: 2rem;
+}
+
+
+
+/* Card */
 
 .card{
     display: flex;
@@ -18,12 +50,38 @@
     box-shadow: 3px 3px 10px 1px #8f8f8f;
 }
 
-.card-heading{
+@media screen and (max-width: 960px) {
+  .card{
+    padding: 2rem 2rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .card{
+    padding: 1rem 1rem;
+
+    width: 100%;
+
+    border-radius: 0;
+    box-shadow: 3px 3px 10px 1px #8f8f8f;
+  }
+}
+
+/* Typography */
+
+.heading-1{
     font-size: 3.5rem;
     margin-bottom: 2rem;
     font-weight: 400;
     color: #002147;
 }
+
+/* Link */
+.link{
+  font-size: 0.75rem;
+}
+
+/* Icon */
 
 .card-icon{
     font-size: 5rem;
@@ -33,7 +91,6 @@
 /* Button */
 
 .primary-button{
-  margin-top: 2rem;
   padding: 0.5rem 2rem;
   width: 80%;
   border: none;
@@ -49,4 +106,10 @@
 .primary-button:hover{
   cursor: pointer;
   background-color: #002147f1;
+}
+
+@media screen and (max-width: 960px) {
+  .primary-button{
+    width: 180px;
+  }
 }
