--- a/client/src/Components/Input/InputLabel.css
+++ b/client/src/Components/Input/InputLabel.css
@@ -26,7 +26,7 @@
 }
   
 .input-label.active {
-    top: 0;
+    top: -2px;
     transform: translate(0, -50%);
     padding: 0 0.2rem;
     background-color: #FBFBFF;
