--- a/client/src/Pages/_Layout/NavBar/NavBar.css
+++ b/client/src/Pages/_Layout/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: #002147;
+    background: var(--primary);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -17,7 +17,7 @@
   }
   
   .navbar-logo {
-    color: #FBFBFF;
+    color: var(--secondary);
     justify-self: start;
     cursor: pointer;
     text-decoration: none;
@@ -46,36 +46,29 @@
   
   .nav-item {
     height: 80px;
-    border-bottom: 2px solid transparent;
-  }
-  
-  .nav-item:hover {
-    border-bottom: 2px solid #FF9900;
   }
   
   .nav-link {
-    color: #FBFBFF;
+    color: var(--secondary);
     display: flex;
     align-items: center;
     text-decoration: none;
     padding: 0.5rem 1rem;
     height: 100%;
+    border-bottom: 4px solid transparent;
   }
 
-  .nav-link:hover{
-    color: #FF9900;
-  }
-  
-  .activated {
-    color: #FF9900;
+  .activated,.nav-link:hover {
+    color: var(--accent);
+    border-bottom: 4px solid var(--accent);
   }
   
   .fa-bars {
-    color: #FBFBFF;
+    color: var(--secondary);
   }
 
   .menu-icon {
-    color: #FBFBFF;
+    color: var(--secondary);
   }
   
   .menu-icon, .mobile-icon {
@@ -113,7 +106,7 @@
     }
   
     .nav-menu.active {
-      background: #002147;
+      background: var(--primary);
       left: 0;
       opacity: 1;
       transition: all 0.6s ease;
@@ -128,9 +121,14 @@
     }
   
     .nav-link:hover {
-      color: #FF9900;
+      color: var(--accent);
       transform: scale(1.2);
       transition: all 0.3s ease;
+      border: none;
+    }
+
+    .activated {
+      border-bottom: none
     }
   
     .nav-item:hover {
