feat: Add validation to signup form

--- a/client/src/Components/Input/InputLabel.css
+++ b/client/src/Components/Input/InputLabel.css
@@ -34,6 +34,14 @@
     background-color: #FBFBFF;
     font-size: 0.8rem;
 }
+
+.input-group.error .input-control{
+    border: 1px solid var(--danger);
+}
+.input-group.error .input-label{
+    color: var(--danger);
+}
+
 @media screen and (max-width: 400px) {
     .input-control {
         width: min(100%, 250px)
