--- a/client/src/GlobalStyle/Typography.css
+++ b/client/src/GlobalStyle/Typography.css
@@ -13,6 +13,11 @@
   color: var(--primary);
 }
 
+/* Error msgs */
+.error-msg{
+  color: var(--danger);
+}
+
 /* Link */
 .link{
   font-size: 0.75rem;
@@ -33,6 +38,9 @@
 
 .card-icon{
     font-size: 5rem;
-    color: var(--primary);
+    color: #002147b0;
+    border: 1px solid #002147b0;
+    border-radius: 30px;
+    padding: 1rem;
 }
 
