feat: Implement users admin page #1

--- a/client/src/GlobalStyle/Layout.css
+++ b/client/src/GlobalStyle/Layout.css
@@ -8,7 +8,7 @@
     margin-left: auto;
     padding-right: 50px;
     padding-left: 50px;
-  }
+}
   
   @media screen and (max-width: 960px) {
     .container{
@@ -53,4 +53,19 @@
     align-items: center;
     height: 80vh;
 }
+
+/* Table */
+
+.table-container{
+  z-index: 1;
+  width: 100%;
+  max-width: 1300px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 50px;
+  padding-left: 50px;
+
+  display: flex;
+}
+
 
