--- a/client/src/GlobalStyle/Component.css
+++ b/client/src/GlobalStyle/Component.css
@@ -13,10 +13,46 @@
     border-radius: 5px;
   }
   
-  .primary-button:hover{
-    cursor: pointer;
-    background-color: var(--primary-2);
-  }
+.primary-button:hover{
+  cursor: pointer;
+  background-color: var(--primary-2);
+}
+
+.secondary-button{
+  padding: 0.5rem 2rem;
+
+  border: 1px solid var(--primary);
+
+  background-color: var(--secondary);
+  color:var(--primary);
+
+  font-size: 1rem;
+
+  border-radius: 5px;
+}
+.secondary-button:hover{
+  background-color: var(--primary-2);
+  color: var(--secondary);
+  cursor: pointer;
+}
+
+.warning-button{
+  padding: 0.5rem 2rem;
+
+  border: 1px solid var(--primary);
+
+  background-color: var(--secondary);
+  color:var(--primary);
+
+  font-size: 1rem;
+
+  border-radius: 5px;
+}
+.warning-button:hover{
+  border: 1px solid var(--danger);
+  color:var(--danger);
+  cursor: pointer;
+}
 
 
 /* Card */
