--- a/client/src/GlobalStyle/Layout.css
+++ b/client/src/GlobalStyle/Layout.css
@@ -23,6 +23,12 @@
   .align-start{
     align-self: flex-start;
   }
+
+  /* Align */
+
+  .center{
+    align-self: center;
+  }
   
   /* Margin */
   .mt-0{
@@ -40,6 +46,28 @@
 
   .mb-1{
     margin-bottom: 0.5rem;
+  }
+  .mb-2{
+    margin-bottom: 1rem;
+  }
+  .mb-3{
+    margin-bottom: 1.5rem;
+  }
+  .mb-4{
+    margin-bottom: 2rem;
+  }
+
+  .ml-1{
+
+  }
+  .ml-2{
+    margin-left: 1rem;
+  }
+  .ml-3{
+
+  }
+  .ml-4{
+
   }
 
   .card div:first-child{
