feat: Add authentication based routing, rendering logic

--- a/client/src/Pages/_Layout/NavBar/NavBar.css
+++ b/client/src/Pages/_Layout/NavBar/NavBar.css
@@ -43,6 +43,10 @@
   .nav-pc-align-left{
     margin-right: auto;
   }
+
+  .nav-pc-align-right{
+    margin-left: auto;
+  }
   
   .nav-item {
     height: 80px;
