--- a/client/src/GlobalStyle/Layout.css
+++ b/client/src/GlobalStyle/Layout.css
@@ -96,4 +96,11 @@
   display: flex;
 }
 
+.full-width-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+}
+
 
