--- a/client/src/Pages/_Layout/NavBar/NavBar.css
+++ b/client/src/Pages/_Layout/NavBar/NavBar.css
@@ -1,12 +1,11 @@
 .navbar {
     background: var(--primary);
-    width: 100%;
     height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 999;
   }
