--- a/client/src/Pages/Articles/Articles.css
+++ b/client/src/Pages/Articles/Articles.css
@@ -63,7 +63,7 @@
     text-decoration: none;
     color: var(--primary);
 }
-.article-container .active{
+.article-link.active, .category-li.active{
    border: 1px solid var(--primary);
    border-radius: 5px;
     background-color:var(--primary-2);
