--- a/client/src/Pages/Articles/Articles.css
+++ b/client/src/Pages/Articles/Articles.css
@@ -1,7 +1,7 @@
 /**** Article ****/
 
 .article-container {
-    width: 80vw;
+    width: 78vw;
     height: 200vh;
 
     padding: 2rem;
@@ -50,6 +50,9 @@
     padding: 1rem;
 
     border-right: 1px solid var(--primary-2);
+
+    display: flex;
+    flex-direction: column;
 }
 
 /* Hide scrollbar */
@@ -62,6 +65,14 @@
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
+}
+
+.add-icon{
+    font-size: 3rem;
+    color: var(--green);
+}
+.create-article{
+    margin-left: auto;
 }
 
 .subcategory-list{
