--- a/client/src/GlobalStyle/Component.css
+++ b/client/src/GlobalStyle/Component.css
@@ -29,6 +29,10 @@
   font-size: 1rem;
 
   border-radius: 5px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .secondary-button:hover{
   background-color: var(--primary-2);
