--- a/client/src/Components/Input/Input.css
+++ b/client/src/Components/Input/Input.css
@@ -11,6 +11,16 @@
     width: 100%
 }
 
+.input-control:disabled{
+    border-color: var(--primary-disabled);
+    color: var(--primary-disabled);
+    -webkit-text-fill-color: var(--primary-disabled);
+}
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px var(--secondary) inset;
+    -webkit-text-fill-color: #002147;
+}
+
 .input-control:focus{
     border: 1px solid transparent;
     outline: 2px solid #FF9900;
@@ -25,6 +35,9 @@
     font-size: 1rem;
     transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
     pointer-events: none;
+}
+.input-label.disabled{
+    color: var(--primary-disabled);
 }
   
 .input-label.active {
