--- a/client/src/GlobalStyle/Component.css
+++ b/client/src/GlobalStyle/Component.css
@@ -11,11 +11,14 @@
     font-size: 1rem;
   
     border-radius: 5px;
-  }
-  
+}
+
 .primary-button:hover{
   cursor: pointer;
   background-color: var(--primary-2);
+}
+.primary-button:disabled{
+  background-color: var(--primary-disabled);
 }
 
 .secondary-button{
