feat: Add markdown editor improvements

--- a/client/src/Pages/CreateArticle/CreateArticle.css
+++ b/client/src/Pages/CreateArticle/CreateArticle.css
@@ -2,15 +2,11 @@
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    padding: 1rem;
+    margin-top: 1rem;
     gap: 1rem;
 }
 
 .save-icon{
     font-size: 1.5rem;
     margin-left: 0.5rem;
-}
-.back-icon{
-    font-size: 2rem;
-    color: var(--primary);
 }
