--- a/client/src/Components/MarkdownEditor/Markdown.css
+++ b/client/src/Components/MarkdownEditor/Markdown.css
@@ -1,48 +1,93 @@
-.editor-container {
+.editor-page-container {
     display: flex;
+    flex-direction: column;
+    width: 100vw;
     height: 75vh;
     padding: 0.5rem;
     gap: 1rem;
 
     /*color*/
 }
+.editor-container{
+    display: flex;
+    flex-wrap: wrap;
 
-.main-container>textarea{
-    width: 48%;
-    height: calc(100vh - 160px);
-    margin: 1rem;
+}
+
+/*  Tools  */
+.markdown-tools{
+    display: flex;
+    align-items: center;
+    gap:0.5rem;
+    flex-basis: 100%;
+    padding: 0.5rem;
+    border: 1px solid var(--primary);
+    border-bottom: none;
+    border-radius: 5px 5px 0 0;
+}
+
+.markdown-tool-icon{
+    font-size: 1.5rem;
+    color: var(--primary);
+    border: 1px solid transparent;
+    border-radius: 3px;
+}
+.markdown-tool-icon:hover{
+    cursor: pointer;
+    border-color: var(--primary);
+}
+
+.markdown-tool-separator{
+    height: 1rem;
+    border-left: 1px solid var(--primary);
+}
+
+/* Textarea */
+
+.editor-container>textarea{
+    flex-grow: 1;
+    flex-basis: 50%;
+    height: calc(100vh - 233px);
     resize: none;
     overflow-y: scroll;
     padding: 0.5rem;
 
-    border-radius: 5px;
-
     font-weight: 200;
+
+    border: 1px solid var(--primary);
+    border-radius: 0 0 0 5px;
 }
 
-.main-container>textarea:focus{
-    outline: 2px solid var(--accent);
+.editor-container>textarea:focus{
+    outline: none;
 }
 
 /* Hide scrollbar */
 
-.main-container>textarea::-webkit-scrollbar, .editor-preview::-webkit-scrollbar {
+.editor-container>textarea::-webkit-scrollbar, .editor-preview::-webkit-scrollbar {
     display: none;
 }
-.main-container>textarea, .editor-preview {
+.editor-container>textarea, .editor-preview {
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
 }
 
+/* Markdown preview */
+
 .editor-preview{
-    width: 48%;
-    height: 100%;
+    flex-grow: 1;
+    flex-basis: 50%;
+    height: calc(100vh - 233px);
     overflow-y: scroll;
     padding: 0.5rem;
 }
-
+.editor-container>.editor-preview{
+    border: 1px solid var(--primary);
+    border-left: none;
+    border-radius: 0 0 5px 0;
+}
 /* Editor preview */
 
 .editor-preview h1,
@@ -87,9 +132,7 @@
 .editor-preview ul{
     margin-left: 1rem;
 }
-/* .editor-preview li::marker{
-    content: url('../../Images/disc.png');
-} */
+
 /* Code */
 .editor-preview pre {
     margin: 2rem 0;
@@ -117,15 +160,74 @@
 .editor-preview strong, .editor-preview em{
     border: 1px solid var(--primary-2);
 }
+/* Blockquote */
 
+.editor-preview blockquote{
+    padding: 1rem 1rem 0.1rem 1rem;
+    border-left: 4px solid var(--primary-disabled);
+    background-color: var(--skeleton);
+    border-radius: 0 5px 5px 0;
+}
+
+blockquote>p{
+    font-style: italic;
+}
+.editor-preview blockquote>p>strong{
+    font-weight: 600;
+    border: none;
+}
+
+/* Table */
+
+.editor-preview table {
+    --border: 1px solid var(--primary);
+    border-radius: 10px;
+    width: 100%;
+    margin: 1rem 0;
+    overflow-x: scroll;
+
+    /* Don't change these properties */
+    border-spacing: 0;
+    border-collapse: separate;
+    border: var(--border);
+    overflow: hidden;
+}
+.editor-preview th, .editor-preview td{
+    text-align: start;
+    padding: 0.25rem 1rem;
+    color: var(--primary);
+}
+.editor-preview th{
+    background-color: var(--primary);
+    color: var(--secondary)
+}
+.editor-preview th:not(:last-child),
+.editor-preview td:not(:last-child){
+    border-right: var(--border);
+}
+
+/* Table */
+
+/* Apply a border to the right of all but the last column */
+/* Apply a border to the bottom of all but the last row */
+.editor-preview table>thead>tr:not(:last-child)>th,
+.editor-preview table>thead>tr:not(:last-child)>td,
+.editor-preview table>tbody>tr:not(:last-child)>th,
+.editor-preview table>tbody>tr:not(:last-child)>td,
+.editor-preview table>tfoot>tr:not(:last-child)>th,
+.editor-preview table>tfoot>tr:not(:last-child)>td,
+.editor-preview table>tr:not(:last-child)>td,
+.editor-preview table>tr:not(:last-child)>th,
+.editor-preview table>thead:not(:last-child),
+.editor-preview table>tbody:not(:last-child),
+.editor-preview table>tfoot:not(:last-child) {
+    border-bottom: var(--border);
+}
 
 /* Editor preview */
+
 
 .note{
     display: flex;
 }
-.test-before{
-    margin-right: 1rem;
-    background-color:red;
-    color: white;
-}
+
