--- a/client/src/GlobalStyle/Component.css
+++ b/client/src/GlobalStyle/Component.css
@@ -12,6 +12,11 @@
   
     border-radius: 5px;
 }
+@media screen and (max-width: 800px){
+  .primary-button{
+    padding: 0.5rem;
+  }
+}
 
 .primary-button:hover{
   cursor: pointer;
@@ -37,6 +42,13 @@
   justify-content: center;
   align-items: center;
 }
+
+@media screen and (max-width: 800px){
+  .secondary-button{
+    padding: 0.5rem;
+  }
+}
+
 .secondary-button:hover{
   background-color: var(--primary-2);
   color: var(--secondary);
@@ -64,6 +76,11 @@
   border: 1px solid var(--danger);
   color:var(--danger);
   cursor: pointer;
+}
+@media screen and (max-width: 800px){
+  .warning-button{
+    padding: 0.5rem;
+  }
 }
 
 
