--- a/client/src/Pages/Users/Users.css
+++ b/client/src/Pages/Users/Users.css
@@ -9,17 +9,29 @@
     background-color: var(--primary);
     color: var(--secondary)
 }
+
 .table {
-    /* Change these properties */
     --border: 1px solid var(--primary);
     border-radius: 10px;
-    width: 100%;
+    align-self: flex-start;
+    margin: 2rem auto;
 
     /* Don't change these properties */
     border-spacing: 0;
     border-collapse: separate;
     border: var(--border);
     overflow: hidden;
+}
+
+@media screen and (max-width: 800px){
+    .table-hidden{
+        display: none;
+    }
+}
+
+
+.table-button-container{
+    display: flex;
 }
    
 /* Apply a border to the right of all but the last column */
