style: Improve sidebar style

--- a/client/src/GlobalStyle/Index.css
+++ b/client/src/GlobalStyle/Index.css
@@ -2,6 +2,7 @@
   --primary: #002147;
   --primary-2: #002147f1;
   --primary-disabled: #002147bd;
+  --primary-transparent:#00214711;
   --secondary: #FBFBFF;
   --danger: red;
   --accent: #FF9900;
