--- a/client/src/Pages/Articles/Components/Sidebar/Sidebar.css
+++ b/client/src/Pages/Articles/Components/Sidebar/Sidebar.css
@@ -48,22 +48,31 @@
 }
 
 .subcategory-list{
-    margin-left: 1rem;
+    margin-left: 0.6rem;
+    padding-left: 0.4rem;
+    border-left: 1px solid var(--primary-transparent);
 }
 .article-list{
-    margin-left: 0.5rem;
+    margin-left: 0.6rem;
+    padding-left: 0.4rem;
+    border-left: 1px solid var(--primary-transparent);
 }
+.article-link,
+.category-li{
+    font-weight: 300;
+}
+
 .category-li{
     display: flex;
     align-items: center;
     list-style: none;
-    padding: 0.3rem 0.5rem;
+    padding: 0.2rem;
     margin: 0.2rem 0; 
     border: 1px solid transparent;
     color: var(--primary);
 }
 .category-li:hover,.article-link:hover{
-    border: 1px solid var(--primary);
+    background-color:var(--primary-transparent);
     border-radius: 5px;
     cursor: pointer;
 }
@@ -73,17 +82,16 @@
 }
 .article-link{
     display: block;
-    padding: 0.15rem 0.5rem;
-    margin: 0.2rem 0rem 0.2rem 1.5rem; 
+    padding: 0.2rem;
+    margin: 0.2rem 0rem; 
     border: 1px solid transparent;
     text-decoration: none;
     color: var(--primary);
 }
 .article-link.active, .category-li.active{
-    border: 1px solid var(--primary);
     border-radius: 5px;
-    background-color:var(--primary-2);
-    color: var(--secondary);
+    background-color:var(--primary-transparent);
+    font-weight: 400;
 }
 
 .sidebar-icon-container{
