--- a/client/src/Pages/Articles/Articles.css
+++ b/client/src/Pages/Articles/Articles.css
@@ -9,6 +9,21 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    height: calc(100vh - 80px);
+    overflow-y: scroll;
+}
+
+/* Hide scrollbar */
+
+.article-container::-webkit-scrollbar {
+    display: none;
+}
+.article-container {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
 .article-header{
