--- a/client/src/Pages/Articles/Components/Sidebar/Sidebar.css
+++ b/client/src/Pages/Articles/Components/Sidebar/Sidebar.css
@@ -13,6 +13,7 @@
 
     display: flex;
     flex-direction: column;
+    gap: 0.5rem;
 }
 
 /* Hide scrollbar */
@@ -42,7 +43,7 @@
     color: var(--primary);
 }
 
-.create-article:hover{
+.create-article-link:hover{
     color: var(--secondary);
     background-color: var(--primary);
 }
