--- a/client/src/Components/MarkdownEditor/Markdown.css
+++ b/client/src/Components/MarkdownEditor/Markdown.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 75vh;
     padding: 0.5rem;
     gap: 1rem;
 
@@ -11,7 +10,7 @@
 .editor-container{
     display: flex;
     flex-wrap: wrap;
-
+    height: calc(100vh - 233px);
 }
 
 /*  Tools  */
@@ -68,12 +67,27 @@
     flex-grow: 1;
     flex-basis: 50%;
     padding: 0.5rem;
+    height: 100%;
+    overflow-y: scroll;
 }
 .editor-container>.editor-preview{
     border: 1px solid var(--primary);
     border-left: none;
     border-radius: 0 0 5px 0;
 }
+
+/* Hide scrollbar */
+
+.editor-container>textarea::-webkit-scrollbar, .editor-container .editor-preview::-webkit-scrollbar {
+    display: none;
+}
+.editor-container>textarea, .editor-container .editor-preview {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
+
 /* Editor preview */
 
 .editor-preview h1,
