--- a/client/src/GlobalStyle/Typography.css
+++ b/client/src/GlobalStyle/Typography.css
@@ -1,14 +1,32 @@
 /* Typography */
 
 .heading-1{
-    font-size: 3.5rem;
-    font-weight: 400;
-    color: var(--primary);
+  font-size: 3.5rem;
+  font-weight: 400;
+  color: var(--primary);
 }
+
 .heading-2{
   font-size: 2rem;
   font-weight: 400;
   color: var(--primary);
+}
+
+.heading-3{
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin-top: 1rem;
+  color: var(--primary);
+}
+
+li::marker{
+  color: var(--primary);
+}
+
+.paragraph-light{
+  color: var(--primary-2);
+  max-width: 70ch;
+  font-size: 1rem;
 }
 
 /* Error msgs */
