feat: Add publish article on frontend

--- a/client/src/Pages/Articles/Articles.css
+++ b/client/src/Pages/Articles/Articles.css
@@ -39,7 +39,7 @@
     color: var(--danger);
     cursor: pointer;
 }
-.edit-icon{
+.edit-icon, .share-icon{
     color: var(--primary);
     cursor: pointer;
 }
