style: Improve global style

--- a/client/src/Pages/Articles/Components/Article/Components/DropdownMenu.css
+++ b/client/src/Pages/Articles/Components/Article/Components/DropdownMenu.css
@@ -34,11 +34,13 @@
     text-align: left;
 }
 .dropdown-menu>*:first-child{
-    border-radius: 5px 5px 0 0;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     padding-top: 0.5rem;
 }
 .dropdown-menu>*:last-child{
-    border-radius: 0 0 5px 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     padding-bottom: 0.5rem;
 }
 
