--- a/client/src/Components/Input/Input.css
+++ b/client/src/Components/Input/Input.css
@@ -1,6 +1,6 @@
 .input-group,.password-input {
     position: relative;   
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     width: 100%;
 }
 
@@ -70,8 +70,7 @@ input:-webkit-autofill {
 
 .password-icon{
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 10px;
     right: 10px
 }
   
