--- a/client/src/Components/Modal/Modal.css
+++ b/client/src/Components/Modal/Modal.css
@@ -21,6 +21,8 @@
     
     display: flex;
     flex-direction: column;
+    /* align-items: center; */
+    gap: 0.75rem;
 }
 .modal-close-btn{
     position: absolute;
