--- a/client/src/GlobalStyle/Component.css
+++ b/client/src/GlobalStyle/Component.css
@@ -2,7 +2,7 @@
 
 .primary-button{
     padding: 0.5rem 2rem;
-    width: 220px;
+    /* width: 220px; */
     border: none;
   
     background-color: var(--primary);
@@ -37,6 +37,8 @@
   font-size: 1rem;
 
   border-radius: 5px;
+
+  /* width: 220px; */
 
   display: flex;
   justify-content: center;
@@ -89,18 +91,25 @@
 .card{
     display: flex;
     flex-direction: column;
-    align-items: center;
-
+    gap:1rem;
     padding: 2rem 3rem;
 
     border-radius: 5px;
     box-shadow: 3px 3px 10px 1px var(--shadow);
 }
 
+.card>*:first-child, .card>*:nth-child(2){
+  align-self: center;
+}
+
+.card-button-group{
+  display: flex;
+  flex-direction: column;
+  gap:0.25rem;
+}
+
 @media screen and (max-width: 400px) {
   .card{
     padding: 1rem 1rem;
-    width: 100%;
-    border-radius: 0;
   }
 }
