--- a/client/src/Pages/_Layout/NavBar/NavBar.css
+++ b/client/src/Pages/_Layout/NavBar/NavBar.css
@@ -131,12 +131,11 @@
       width: 100%;
       display: flex;
       justify-content: center;
+      border: none;
     }
   
     .nav-link:hover {
       color: var(--accent);
-      transform: scale(1.2);
-      transition: all 0.3s ease;
       border: none;
     }
 
