--- a/client/src/Components/MarkdownEditor/Markdown.css
+++ b/client/src/Components/MarkdownEditor/Markdown.css
@@ -4,8 +4,10 @@
   width: 100vw;
   padding: 0.5rem;
   gap: 1rem;
-
-  /*color*/
+}
+.controls {
+  display: flex;
+  justify-content: flex-end;
 }
 .editor-container {
   display: flex;
