style: Improve home page

--- a/client/src/Pages/Home/Components/SearchBar/SearchBar.css
+++ b/client/src/Pages/Home/Components/SearchBar/SearchBar.css
@@ -1,63 +1,80 @@
-.searchbar-group {
-    position: relative;
+.search-bar-group {
+  position: relative;
 }
 
-.searchbar-input{
-    position: relative;
+.search-bar-input {
+  position: relative;
 }
 
-.searchbar{
-    border-radius: 20px;
-    padding: 0.5rem 1rem;
+.search-bar {
+  border-radius: 30px;
+  padding: 1rem;
+  width: min(420px, 95vw);
 
-    border: 1px solid var(--primary)
-}
+  font-size: 1.2rem;
+  color: var(--primary-2);
 
-.searchbar:focus{
-    outline: 1px solid var(--accent);
-    border: 1px solid transparent;
-}
-
-.search-icon{
-    font-size: 1.5rem;
-    color: var(--primary);
-    position: absolute;
-    right:5px;
-    transform: translateY(-50%);
-    top: 50%;
+  border: 2px solid var(--primary);
+  background-color: var(--primary-transparent);
 }
 
-.search-results{
-    border: 1px solid var(--accent);
-    border-radius:0 0 5px 5px;
-    position: absolute;
-    left: 13px;
-    width: calc(100% - 26px);
+.search-bar:focus {
+  outline: 1px solid var(--primary-2);
+  background-color: var(--secondary);
+}
+.search-bar::placeholder {
+  color: var(--primary-2);
 }
 
-.search-result-link{
-    text-decoration: none;
-   
+.search-icon {
+  font-size: 2rem;
+  color: var(--primary-2);
+  position: absolute;
+  right: 10px;
+  transform: translateY(-50%);
+  top: 50%;
 }
 
-.serach-result-article{
-    background-color: var(--secondary);
-    border-radius: 5px;
-}
-.serach-result-article:hover{
-    background-color: var(--skeleton);
-}
-
-.serach-result-article-h2{
-    color: var(--primary);
-    font-weight: 400;
-    font-size: 1.2rem;
+.search-results {
+  border: 1px solid var(--primary);
+  border-radius: 5px;
+  position: absolute;
+  left: 20px;
+  top: 61px;
+  width: calc(100% - 40px);
+  z-index: 10;
 }
 
-.serach-result-article-h2,.serach-result-article-p{
-    padding: 0.2rem;
+.search-result-link {
+  text-decoration: none;
 }
-.serach-result-article-p{
-    color: var(--primary-2);
-    font-size: 0.8rem;
+
+.search-result-article {
+  background-color: var(--secondary);
+  border-bottom: 1px solid var(--primary);
+}
+.search-result-article:hover {
+  background-color: var(--primary-light);
+}
+.search-result-link:first-child > .search-result-article {
+  border-radius: 5px 5px 0 0;
+}
+.search-result-link:last-child > .search-result-article {
+  border-radius: 0 0 5px 5px;
+  border: none;
+}
+
+.search-result-article-h2 {
+  color: var(--primary);
+  font-weight: 400;
+  font-size: 1.2rem;
+}
+
+.search-result-article-h2,
+.search-result-article-p {
+  padding: 0.2rem;
+}
+.search-result-article-p {
+  color: var(--primary-2);
+  font-size: 0.8rem;
 }
