--- a/client/src/GlobalStyle/Index.css
+++ b/client/src/GlobalStyle/Index.css
@@ -1,6 +1,7 @@
 :root {
   --primary: #002147;
   --primary-2: #002147f1;
+  --primary-light: #d4dde9;
   --primary-disabled: #002147bd;
   --primary-transparent: #00214711;
   --secondary: #fbfbff;
