--- a/client/src/Pages/Home/Home.css
+++ b/client/src/Pages/Home/Home.css
@@ -1,74 +1,73 @@
-.hero-container{
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    overflow-x: hidden;
+.hero-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  overflow-x: hidden;
 }
 
-.hero-animation{
-    margin: 15vh 0;
-    flex-basis: 30%;
+.hero-animation {
+  margin: 15vh 0;
+  flex-basis: 30%;
 }
-.hero-content{
-    margin: 15vh 0;
-    flex-basis: 70%;
-}
-
-.landing-h1{
-    margin: 0 1rem;
-    color: var(--primary);
-    font-size: 2.5rem;
-    font-weight: 400;
-}
-.landing-p{
-    margin-top: 1vh;
-    padding: 0 1rem;
-    color: var(--primary);
-    font-size: 1.25rem;
-    font-weight: 300;
+.hero-content {
+  margin: 15vh 0;
+  flex-basis: 70%;
 }
 
-.landing-cta{
-    display: flex;
+.landing-h1 {
+  margin: 0 1rem;
+  color: var(--primary);
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+.landing-p {
+  margin-top: 1vh;
+  padding: 0 1rem;
+  color: var(--primary);
+  font-size: 1.25rem;
+  font-weight: 300;
+}
+
+.landing-cta {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  padding: 4rem 0 0 1rem;
+}
+
+@media screen and (max-width: 900px) {
+  .hero-container {
+    flex-direction: column;
     align-items: center;
-    gap: 2rem;
-    padding:3rem 0 0 1rem;
+    justify-content: start;
+    flex-wrap: wrap;
+  }
+
+  .hero-animation {
+    margin: 3rem 0;
+    flex-basis: 0;
+  }
+  .hero-content {
+    margin: 3rem 0;
+    flex-basis: 0;
+  }
 }
 
-@media screen and (max-width:900px) {
-    .hero-container{
-        flex-direction: column;
-        align-items: center;
-        justify-content:start;
-        flex-wrap: wrap;
-    }
-
-    .hero-animation{
-        margin: 3rem 0;
-        flex-basis: 0;
-    }
-    .hero-content{
-        margin: 3rem 0;
-        flex-basis: 0;
-    }
-    
-}
-
-@media screen and (max-width:500px) {
-    .landing-cta{
-        flex-direction: column;
-        padding: 3rem 0 0 0;
-    }
-    .landing-h1{
-        margin: 1rem 1rem 0 1rem;
-        font-size: 2.2rem;
-    }
-    .hero-animation{
-        margin: 2rem 0;
-    }
-    .hero-content{
-        margin: 1rem 0;
-    }
-    
+@media screen and (max-width: 500px) {
+  .landing-cta {
+    flex-direction: column;
+    padding: 3rem 0 0 0;
+  }
+  .landing-h1 {
+    margin: 1rem 1rem 0 1rem;
+    font-size: 2.2rem;
+  }
+  .hero-animation {
+    margin: 2rem 0;
+  }
+  .hero-content {
+    margin: 1rem 0;
+  }
 }
