--- a/client/src/GlobalStyle/Component.css
+++ b/client/src/GlobalStyle/Component.css
@@ -1,38 +1,38 @@
 /* Button */
 
-.primary-button{
-    padding: 0.5rem 2rem;
-    /* width: 220px; */
-    border: none;
-  
-    background-color: var(--primary);
-    color:var(--secondary);
-  
-    font-size: 1rem;
-  
-    border-radius: 5px;
+.primary-button {
+  padding: 0.5rem 2rem;
+  /* width: 220px; */
+  border: none;
+
+  background-color: var(--primary);
+  color: var(--secondary);
+
+  font-size: 1rem;
+
+  border-radius: 5px;
 }
-@media screen and (max-width: 800px){
-  .primary-button{
+@media screen and (max-width: 800px) {
+  .primary-button {
     padding: 0.5rem;
   }
 }
 
-.primary-button:hover{
+.primary-button:hover {
   cursor: pointer;
   background-color: var(--primary-2);
 }
-.primary-button:disabled{
+.primary-button:disabled {
   background-color: var(--primary-disabled);
 }
 
-.secondary-button{
+.secondary-button {
   padding: 0.25rem 1.5rem;
 
   border: 1px solid var(--primary);
 
   background-color: var(--secondary);
-  color:var(--primary);
+  color: var(--primary);
 
   font-size: 1rem;
 
@@ -45,71 +45,71 @@
   align-items: center;
 }
 
-@media screen and (max-width: 800px){
-  .secondary-button{
+@media screen and (max-width: 800px) {
+  .secondary-button {
     padding: 0.5rem;
   }
 }
 
-.secondary-button:hover{
-  background-color: var(--primary-2);
-  color: var(--secondary);
+.secondary-button:hover {
+  background-color: var(--primary-light);
   cursor: pointer;
 }
 
-.secondary-button:disabled,.secondary-button:disabled:hover{
+.secondary-button:disabled,
+.secondary-button:disabled:hover {
   border: 1px solid var(--primary-disabled);
-  color:var(--primary-disabled);
+  color: var(--primary-disabled);
 }
 
-.warning-button{
+.warning-button {
   padding: 0.5rem 2rem;
 
   border: 1px solid var(--primary);
 
   background-color: var(--secondary);
-  color:var(--primary);
+  color: var(--primary);
 
   font-size: 1rem;
 
   border-radius: 5px;
 }
-.warning-button:hover{
+.warning-button:hover {
   border: 1px solid var(--danger);
-  color:var(--danger);
+  color: var(--danger);
   cursor: pointer;
 }
-@media screen and (max-width: 800px){
-  .warning-button{
+@media screen and (max-width: 800px) {
+  .warning-button {
     padding: 0.5rem;
   }
 }
 
-
 /* Card */
 
-.card{
-    display: flex;
-    flex-direction: column;
-    gap:1rem;
-    padding: 2rem 3rem;
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem 3rem;
 
-    border-radius: 5px;
-    box-shadow: 3px 3px 10px 1px var(--shadow);
+  border-radius: 5px;
+  box-shadow: 3px 3px 10px 1px var(--shadow);
 }
 
-.card>*:first-child, .card>*:nth-child(2){
+.card > *:first-child,
+.card > *:nth-child(2) {
   align-self: center;
 }
 
-.card-button-group{
+.card-button-group {
   display: flex;
   flex-direction: column;
-  gap:0.25rem;
+  gap: 0.25rem;
 }
 
 @media screen and (max-width: 400px) {
-  .card{
+  .card {
     padding: 1rem 1rem;
   }
 }
