--- a/client/src/Pages/Home/Components/SearchBar/SearchBar.css
+++ b/client/src/Pages/Home/Components/SearchBar/SearchBar.css
@@ -15,7 +15,7 @@
   color: var(--primary-2);
 
   border: 2px solid var(--primary);
-  background-color: var(--primary-transparent);
+  background-color: var(--secondary);
 }
 
 .search-bar:focus {
@@ -60,7 +60,8 @@
   border-radius: 5px 5px 0 0;
 }
 .search-result-link:last-child > .search-result-article {
-  border-radius: 0 0 5px 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   border: none;
 }
 
