style: Fix home page featured section

--- a/client/src/Pages/Home/Components/Featured/Featured.css
+++ b/client/src/Pages/Home/Components/Featured/Featured.css
@@ -1,28 +1,33 @@
-.featured{
-    position: relative;
-    display: flex;
-    align-content: stretch;
-    justify-content:left;
-    flex-wrap: wrap;
-    gap: 1rem;
-    border: 1px solid var(--shadow);
-    border-radius: 10px;
-    padding: 1rem;
-    margin: 5rem 1rem 1rem;
+.featured {
+  position: relative;
+  display: flex;
+  align-content: stretch;
+  justify-content: left;
+  flex-wrap: wrap;
+  flex-basis: 100%;
+  gap: 1rem;
+  border: 1px solid var(--shadow);
+  border-radius: 10px;
+  padding: 1rem;
+  margin: 5rem 1rem 1rem;
 }
 
-.featured-label{
-    position: absolute;
-    left: 1.5rem;
-    top:-1rem;
-
-    font-size: 1.5rem;
-    font-weight: 300;
-    color: var(--primary);
-
-    padding: 0 0.5rem;
-
-    background-color: var(--secondary);
+@media screen and (max-width: 960px) {
+  .featured {
+    flex-basis: 0;
+  }
 }
 
+.featured-label {
+  position: absolute;
+  left: 1.5rem;
+  top: -1rem;
 
+  font-size: 1.5rem;
+  font-weight: 300;
+  color: var(--primary);
+
+  padding: 0 0.5rem;
+
+  background-color: var(--secondary);
+}
