--- a/client/src/Pages/Profile/Components/ProfilePicture.css
+++ b/client/src/Pages/Profile/Components/ProfilePicture.css
@@ -15,13 +15,14 @@
 .upload-profile-pic-button:hover {
   cursor: pointer;
   background-color: var(--primary-light);
-  border-color: var(--primary-2);
 }
 
 .profile-picture {
   max-width: 200px;
-  border: 2px solid var(--primary);
   border-radius: 50%;
+  border: 4px solid var(--shadow);
+  background-color: var(--secondary);
+  padding: 0.1rem;
 }
 .crop-container {
   position: relative;
@@ -32,4 +33,23 @@
 .upload-image-modal {
   background-color: var(--secondary);
   padding: 1rem;
+}
+
+.select-profile-picture-button {
+  display: none;
+}
+
+.image-crop-button-container {
+  width: 300px;
+  gap: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+.image-crop-button-container > * {
+  flex: 1;
+}
+
+.select-file {
+  white-space: nowrap;
+  text-align: center;
 }
