--- a/client/src/Pages/Profile/Components/ProfileData/ProfilePicutre/ProfilePicture.css
+++ b/client/src/Pages/Profile/Components/ProfileData/ProfilePicutre/ProfilePicture.css
@@ -4,12 +4,13 @@
 
 .upload-profile-pic-button {
   position: absolute;
-  bottom: 40px;
-  right: 25px;
+  bottom: 30px;
+  right: 20px;
   border: 1px solid transparent;
   border-radius: 50%;
   padding: 0.2rem 0.3rem;
   background-color: var(--secondary);
+  border: 1px solid var(--shadow);
 }
 
 .upload-profile-pic-button:hover {
