--- a/client/src/Components/Featured/Featured.css
+++ b/client/src/Components/Featured/Featured.css
@@ -1,20 +1,19 @@
 .featured {
   position: relative;
   display: flex;
+  align-items: flex-start;
   align-content: stretch;
-  justify-content: left;
+  justify-content: center;
   flex-wrap: wrap;
-  flex-basis: 100%;
   gap: 1rem;
   border: 1px solid var(--shadow);
   border-radius: 10px;
   padding: 1rem;
-  margin: 5rem 1rem 1rem;
 }
 
 @media screen and (max-width: 960px) {
   .featured {
-    flex-basis: 0;
+    border-radius: 0;
   }
 }
 
