--- a/client/src/Pages/Profile/Profile.css
+++ b/client/src/Pages/Profile/Profile.css
@@ -1,12 +1,12 @@
 .profile-container {
+  display: flex;
+  gap: 1rem;
   padding: 1rem;
 }
 
 .profile-data-container {
   border: 1px solid var(--shadow);
-  /* background-color: var(--primary-transparent); */
-
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -21,4 +21,15 @@
 }
 .profile-data-label {
   padding-top: 1rem;
+}
+
+@media screen and (max-width: 900px) {
+  .profile-container {
+    flex-wrap: wrap;
+    padding: 0;
+  }
+  .profile-data-container {
+    border: none;
+    max-width: 900px;
+  }
 }
