--- a/client/src/Components/Featured/Featured.css
+++ b/client/src/Components/Featured/Featured.css
@@ -1,10 +1,10 @@
 .featured {
+  flex-basis: 100%;
   position: relative;
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
-  align-content: stretch;
-  justify-content: center;
-  flex-wrap: wrap;
+  justify-content: flex-start;
   gap: 1rem;
   border: 1px solid var(--shadow);
   border-radius: 10px;
@@ -29,4 +29,8 @@
   padding: 0 0.5rem;
 
   background-color: var(--secondary);
+}
+
+.no-available-articles {
+  flex-basis: 100%;
 }
