feat: Add custom markdown elements

--- a/client/src/Components/MarkdownEditor/Markdown.css
+++ b/client/src/Components/MarkdownEditor/Markdown.css
@@ -309,3 +309,61 @@ blockquote > p {
 .artilce-landing-ul {
   margin: 1.5rem 0 0 2rem;
 }
+
+.markdown-note {
+  background-color: #d44242;
+}
+
+/* Custom components */
+/* Custom block quotes */
+[class$="quote-container"] {
+  display: flex;
+  margin: 1rem 0;
+  border-radius: 0 5px 5px 0;
+}
+[class$="quote-icon-container"] {
+  display: flex;
+  align-items: center;
+  padding: 1rem 0.2rem;
+}
+[class$="quote-text"] {
+  padding: 0.25rem 0.5rem;
+}
+.info-quote-container {
+  background-color: var(--info-transparent);
+}
+.info-quote-icon-container {
+  background-color: var(--info);
+}
+.info-icon {
+  font-size: 1.75rem;
+  color: var(--secondary);
+}
+
+.warning-quote-container {
+  background-color: var(--warning-transparent);
+}
+.warning-quote-icon-container {
+  background-color: var(--warning);
+}
+.warning-icon {
+  font-size: 1.75rem;
+  color: var(--secondary);
+}
+.warning-block-quote-text {
+  color: var(--primary);
+}
+
+/* Heading */
+.custom-heading {
+  display: flex;
+  align-items: center;
+}
+.heading-anchor {
+  display: flex;
+  margin-left: 0.25rem;
+  color: var(--primary-transparent);
+}
+.heading-anchor:hover {
+  color: var(--primary);
+}
