--- a/client/src/Pages/Articles/Articles.css
+++ b/client/src/Pages/Articles/Articles.css
@@ -1,6 +1,7 @@
 /**** Article ****/
 
 .article-container {
+  position: relative;
   width: 78vw;
   height: calc(100vh - 80px);
 
@@ -10,7 +11,6 @@
   flex-direction: column;
   gap: 1rem;
 
-  height: calc(100vh - 80px);
   overflow-y: scroll;
 }
 
